# app-lite

./: .gitignore  .gitmodules  LICENSE.md  README.md  cspell.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: publish.yml
examples/commands/: announce.js  bonkWithCounter.js  followage.js  shoutout.js  tts-voices.js  tts.js
examples/scripts/: tts-redeem.js
overlay/: .env.development  .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
overlay/src/: constants.ts  main.ts  math.ts  style.css  throw-animations.css
overlay/src/styles/: app.css
overlay/src/utils/: async.ts  base64.ts  index.ts  math.ts  url.ts
overlay/src/vtftk/: api.ts  appData.ts  calibration-types.ts  calibration.ts  config.ts  events.ts  types.ts
overlay/src/vtube-studio/: auth.ts  constants.ts  error.ts  event.ts  flinch.ts  hotkeys.ts  message.ts  model.ts  physics.ts  socket.ts  throw-item.ts  token.ts
script/: api.d.ts  example.js  example_command.js  runtime.js  wrapper.js  wrapper_call.js  wrapper_command.js
script/runtime/: runtime.js
scripting/: cspell.json  fix-global-file.mjs  jest.config.mjs  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
scripting/src/: arrayExt.ts  commandContext.ts  context.ts  core.ts  eventContext.ts  global.d.ts  http.test.ts  http.ts  index.ts  internal.ts  kv.test.ts  kv.ts  logging.ts  random.ts  runtime.ts  twitch.ts  vtftk.ts
scripting/src/integrations/: index.ts  tts_monster.ts
scripting/src/runtime/: twitch.ts
scripting/types/: builtin.d.ts  core.d.ts
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  data.rs  event_processing.rs  events.rs  lib.rs  main.rs  tray.rs  tts.rs
src-tauri/src/commands/: auth.rs  calibration.rs  commands.rs  data.rs  events.rs  items.rs  mod.rs  scripts.rs  sounds.rs  test.rs  throw.rs  twitch.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/entity/: app_data.rs  chat_history.rs  command_aliases.rs  command_executions.rs  command_logs.rs  commands.rs  event_executions.rs  event_logs.rs  events.rs  item_collection_items.rs  item_collections.rs  items.rs  items_impact_sounds.rs  items_sounds.rs  key_value.rs  links.rs  mod.rs  model_data.rs  script_events.rs  script_logs.rs  scripts.rs  shared.rs  sounds.rs  twitch_access.rs  vt_access.rs
src-tauri/src/database/migration/: m20241208_060123_create_items_table.rs  m20241208_060138_create_events_table.rs  m20241208_060144_create_sounds_table.rs  m20241208_060150_create_scripts_table.rs  m20241208_060200_create_commands_table.rs  m20241208_060230_create_model_data_table.rs  m20241208_063859_create_items_impact_sounds_junction_table.rs  m20241208_063859_create_items_sounds_junction_table.rs  m20241210_061820_create_script_events_table.rs  m20241210_082256_create_event_executions_table.rs  m20241210_082316_create_command_executions_table.rs  m20241211_102725_seed_defaults.rs  m20241212_114700_create_key_value_table.rs  m20241214_080854_create_script_logs_table.rs  m20241214_080902_create_command_logs_table.rs  m20241219_090305_create_item_collections_table.rs  m20241219_090529_create_item_collection_items_table.rs  m20241227_110419_create_event_logs_table.rs  m20250104_053253_create_twitch_access_table.rs  m20250104_060420_create_vt_access_table.rs  m20250104_071851_create_app_data_table.rs  m20250124_082703_create_chat_history_table.rs  m20250209_101257_create_command_aliases_table.rs  mod.rs
src-tauri/src/events/: event_processing.rs  matching.rs  mod.rs  outcome.rs  processing.rs  scheduler.rs
src-tauri/src/http/: error.rs  mod.rs  server.rs  ws.rs
src-tauri/src/http/models/: calibration.rs  mod.rs
src-tauri/src/http/resources/: twitch-oauth-response.html
src-tauri/src/http/routes/: calibration.rs  data.rs  events.rs  mod.rs  oauth.rs  overlay.rs
src-tauri/src/integrations/: mod.rs  tts_monster.rs
src-tauri/src/script/: events.rs  kv.rs  mod.rs  module_loader.rs  runtime.js  runtime.rs  wrapper_events.js
src-tauri/src/script/esm/: runtime.js  wrapper_call.js  wrapper_command.js
src-tauri/src/script/ops/: core.rs  http.rs  kv.rs  logging.rs  mod.rs  twitch.rs  vtftk.rs
src-tauri/src/state/: app_data.rs  auth.rs  mod.rs  runtime_app_data.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/twitch/: manager.rs  mod.rs  models.rs  websocket.rs
src/lib/: globalStores.ts  monaco.ts
src/lib/api/: calibration.ts  client.ts  commandModel.ts  commands.ts  data.ts  eventModel.ts  events.ts  itemCollections.ts  itemModel.ts  items.ts  oauth.ts  runtimeAppData.ts  scripts.ts  socket.ts  soundModel.ts  sounds.ts  throwables.ts  twitch.ts  types.ts  utils.ts  vevents.ts
src/lib/components/: AppToaster.svelte  Aside.svelte  Card.svelte  CardButton.svelte  CodeEditor.svelte  ConfirmDialog.svelte  DetectVTubeStudio.svelte  Dialog.svelte  DialogCloseButton.svelte  ExecutionMetadataDialog.svelte  ExecutionsTable.svelte  GlobalConfirmDialog.svelte  HTabs.svelte  Label.svelte  LogsTable.svelte  OrderableGrid.svelte  OrderableList.svelte  SizeAndPositionManager.js  StatusIndicator.svelte  TemplateEditor.svelte  VirtualOrderableGrid.svelte
src/lib/layouts/: PageLayoutList.svelte
src/lib/schemas/: event.ts  item.ts
src/lib/sections/: AppDataProvider.svelte  Calibration.svelte  CreateThrowable.svelte  TwitchOAuth.svelte  TwitchOAuthGate.svelte
src/lib/styles/: app.css  global.css  global.scss
src/lib/utils/: browser.ts  date.ts  debounce.svelte.ts  error.ts  eventTestData.ts  format.ts  search.ts  selection.svelte.ts  url.ts  validation.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/calibration/: +page.svelte
src/routes/commands/: +page.svelte
src/routes/events/: +page.svelte
src/routes/scripts/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/sounds/: +page.svelte
types/: appData.ts  dataV2.ts  runtimeAppData.ts
(+107 files in other folders)
