[package]
name = "vtftk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vtftk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
twitch_api = { version = "0.7.0-rc.8", features = [
    "helix",
    "eventsub",
    "all",
    "reqwest",
] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
] }
axum = { version = "0.7.9", features = ["ws", "macros"] }
url = "2.5.3"
webbrowser = "1.0.2"
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
futures-util = "0.3.31"
futures = "0.3.31"
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-native-roots",
] }
env_logger = "0.11.5"
tower-http = { version = "0.6.2", features = ["cors"] }
mime = "0.3.17"
mime_guess = "2.0.5"
rand = "0.8.5"
moka = { version = "0.12.8", features = ["future"] }

# Temporary dependency overrides until new eventsub payloads land
# (https://github.com/twitch-rs/twitch_api/pull/457)
[patch.crates-io.twitch_api]
git = 'https://github.com/twitch-rs/twitch_api.git'
rev = "866de1f"

[patch.crates-io.twitch_types]
git = 'https://github.com/twitch-rs/twitch_api.git'
rev = "866de1f"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
