[package]
name = "vtftk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vtftk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Deno core for compiling runtime snapshot
deno_core = "0.323.0"

[dependencies]
# Tauri for frontend UI
tauri = { version = "2", features = ["tray-icon"] }

# Twitch API for working with twitch
twitch_api = { version = "0.7.0-rc.8", features = [
    "helix",
    "eventsub",
    "all",
    "reqwest",
] }

# Websocket client for twitch event sub
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-native-roots",
] }

# Serialization and JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 
reqwest = { version = "0.12.9", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
] }

# HTTP server
axum = { version = "0.7.9", features = ["ws", "macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Asynchronous runtime and utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.16", features = ["full"] }

uuid = { version = "1", features = ["v4", "serde"] }

# Mime type guessing for file serving
mime_guess = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# JavaScript runtime
deno_core = "0.323.0"
interlink = "0.1.6"
chrono = { version = "0.4.39", features = ["serde"] }
tauri-plugin-shell = "2.2.0"


# App database
[dependencies.sea-orm]
version = "1.1.0"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]

# Database migration runner
[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["sqlx-sqlite", "runtime-tokio-rustls"]

# Temporary dependency overrides until new eventsub payloads land
# (https://github.com/twitch-rs/twitch_api/pull/457)
[patch.crates-io.twitch_api]
git = 'https://github.com/twitch-rs/twitch_api.git'
rev = "866de1f"

[patch.crates-io.twitch_types]
git = 'https://github.com/twitch-rs/twitch_api.git'
rev = "866de1f"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

# Prevent multiple instances
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.2.0"
